--- a/qa-110822/Pages/Index.cshtml
+++ b/qa-110822/Pages/Index.cshtml
@@ -58,11 +58,11 @@
 					<div class="mw-570">
 						<div class="row align-items-center">
 							<div class="col-lg-3">
-								<div class="logo">Startup</div>
+								<div class="logo">Company Startup</div>
 							</div>
 							<div class="col-lg-9 text-right">
-								<a href="#" class="link color-heading medium ml-35">Pricing</a>
-								<a href="#" class="link color-heading medium ml-35">About</a>
+								<a href="#" class="link color-heading medium ml-35">Company Pricing</a>
+								<a href="#" class="link color-heading medium ml-35">About Company</a>
 							</div>
 						</div>
 					</div>
