--- a/qa-110822/Pages/Index.cshtml
+++ b/qa-110822/Pages/Index.cshtml
@@ -112,7 +112,7 @@ We offer professional SEO services that help websites increase their organic sea
 					<div class="col-sm-1">
 					</div>
 					<div class="col-xl-6 col-lg-7 col-md-8 col-sm-10 pt-105 pb-80 inner">
-						<h2 class="mb-25 small">Start Your Business</h2>
+						<h2 class="mb-25 small">Stop Your Business</h2>
 						<div class="f-22 color-heading text-adaptive">
 							We have created a new product that will help 
 							designers, developers and companies create 
